# Fraction

./: CMakeLists.txt  README.md
include/: Fraction.h  fraction.h
src/: Fraction.cpp  fraction.cpp  main.cpp
